--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,41 +1,20 @@
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins"
 
-# Tmux should be pretty, we need 256 color for that
-set -g default-terminal "$TERM"
-
-# 0 is too far from ` ;)
-set -g base-index 1
-
 set-option -g default-shell /bin/zsh  # set zsh as default shell
 set-option -g prefix C-q
 unbind-key C-b
 
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-window-option -g mouse on
-set-option -g set-titles on
-
-#set -g default-terminal xterm-256color
-set -g status-keys vi
 set -g history-limit 30000
-
-setw -g aggressive-resize on
 setw -g mouse on
-setw -g mode-keys vi
-setw -g monitor-activity on
 setw -g xterm-keys on
-
-set -g status-left-length 30
-set -g status-left '#[fg=gray](#S) '
-set -g status-right '#[fg=gray]#[default]'
 
 # No delay for escape key press
 set -sg escape-time 0
 
-bind-key j resize-pane -D
-bind-key k resize-pane -U
-bind-key h resize-pane -L
-bind-key l resize-pane -R
+bind-key j resize-pane -D 10
+bind-key k resize-pane -U 5
+bind-key h resize-pane -L 5
+bind-key l resize-pane -R 10
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -53,53 +32,68 @@ bind r source-file ~/.tmux.conf
 # Split window more easily
 bind-key s split-window -h
 bind-key v split-window
+unbind '"'
+unbind %
+
+# Copy
+bind-key [ copy-mode
+bind-key ] paste-buffer
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+
+# Colours
+# set -g default-terminal "screen-256color"
+# set -g default-terminal "${TERM}"
+
+
+set -g set-titles on
+set -g set-titles-string "#W #{command} #T #{session_path}"
+set -g mode-keys vi
+set -g status-keys vi
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
+set -g bell-action none
+set -g status-position bottom
+set -g status-interval 5
+
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-window-option -g mouse on
+set-option -g set-titles on
+set-option -g automatic-rename-format '#{pane_current_path}'
+set-option -g focus-events on
+
+set -g status "on"
+set -g status-justify "left"
+set -g status-style "none,bg=default"
+set -g status-left-style "none"
+set -g status-left-length "100"
+set -g status-right-style "none"
+set -g status-right-length "100"
+set -g pane-border-style "fg=brightwhite,bg=default"
+set -g pane-active-border-style "fg=brightwhite,bg=default"
+set -g pane-border-status bottom
+set -g pane-border-format ""
+set -g message-style "fg=brightwhite,bg=default"
+set -g message-command-style "fg=brightwhite,bg=default"
+setw -g window-status-activity-style "none"
+setw -g window-status-separator " "
+setw -g window-status-style "none,fg=brightwhite,bg=default"
+set -g status-left "#[fg=brightwhite,bg=default,bold]#S #[fg=brightwhite,bg=default,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=brightwhite,bg=default]%I:%M%p #[fg=brightgreen,bg=default]•#[fg=brightwhite,bg=default] %m/%d/%Y #[fg=brightgreen,bg=default,bold,nounderscore,noitalics] #[fg=brightwhite,bg=default]#h #[fg=brightgreen,bg=default]"
+setw -g window-status-format "#[fg=brightwhite,bg=default] #W "
+setw -g window-status-current-format "#[fg=brightgreen,bg=default]#[fg=brightwhite,bg=default] #W #[fg=brightgreen,bg=default]"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-# bind -n M-v copy-mode
-# unbind-key -T copy-mode-vi v
-# bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-# bind-key -T copy-mode-vi 'C-v' send-keys -X rectangle-toggle
-# # copy & paste between tmux and x clipboard
-# bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
-# bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'xclip -in -selection clipboard > /dev/null'
-#
-# bind -n M-x kill-pane
-# bind-key C-a last-window
-#
-# bind-key a send-prefix # to use C-a a <command> to send commands to a nested TMUX session
-#
-# bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
-# bind -n WheelDownPane select-pane -t= \;                 send-keys -M
-#
-# bind-key o split-window -v
-# bind-key e split-window -h
-#
-# # THEME
-# set -g status off
-# set -g status-bg black
-# set -g status-fg white
-# set -g window-status-current-bg white
-# set -g window-status-current-fg black
-# set -g window-status-current-attr bold
-# set -g status-interval 60
-# set -g status-left-length 30
-# set -g status-left '#[fg=green](#S) #(whoami)'
-# set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
-#
-# # List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
-#
-# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.tmux/plugins/tpm/tpm'
-#
