--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,19 +27,22 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 # Reload tmux config
-bind r source-file ~/.tmux.conf
+bind r source-file ~/dotfiles-sepehr/.tmux.conf
 
 # Split window more easily
-bind-key s split-window -h
-bind-key v split-window
+bind-key v split-window -h
+bind-key s split-window
 unbind '"'
 unbind %
 
 # Copy
+set -g set-clipboard on
 bind-key [ copy-mode
 bind-key ] paste-buffer
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -52,9 +55,9 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
 # Colours
-# set -g default-terminal "screen-256color"
-# set -g default-terminal "${TERM}"
-
+set -g default-terminal "tmux-256color"
+# set-option -g default-terminal "screen-256color"
+# set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 set -g set-titles on
 set -g set-titles-string "#W #{command} #T #{session_path}"
