--- a/.proxychains/proxychains.conf
+++ b/.proxychains/proxychains.conf
@@ -5,5 +5,6 @@ tcp_connect_time_out 80000
 
 [ProxyList]
 # socks5 127.0.0.1 10808
-socks5 127.0.0.1 20230
+# socks5 127.0.0.1 20230
+socks5 172.16.86.239 2080
 
