--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,8 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 # Reload tmux config
-bind r source-file ~/dotfiles-sepehr/.tmux.conf
+# DOTFILESDIR
+bind r source-file ~/dotfiles/.tmux.conf
 
 # Split window more easily
 bind-key v split-window -h
@@ -40,9 +41,10 @@ set -g set-clipboard on
 bind-key [ copy-mode
 bind-key ] paste-buffer
 bind-key -T copy-mode-vi v send -X begin-selection
-# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xsel -ib"
+# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xsel -ib"
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
