--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,9 +41,9 @@ set -g set-clipboard on
 bind-key [ copy-mode
 bind-key ] paste-buffer
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xsel -ib"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "wl-copy"
 # bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xsel -ib"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "wl-copy"
 # bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # List of plugins
