--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	name = Sepehr Solouki
 	email = sepehr@ethicadata.com
 [core]
-	editor = nvim
+	editor = vim
 [init]
   defaultBranch = master
 # [diff]
