--- a/.proxychains/proxychains.conf
+++ b/.proxychains/proxychains.conf
@@ -7,5 +7,6 @@ tcp_connect_time_out 80000
 # socks5 127.0.0.1 10808
 # socks5 127.0.0.1 20230
 # socks5 172.16.86.239 2080
-socks5 127.0.0.1 8080
-
+# socks5 127.0.0.1 8080
+socks5 31.14.122.59 20170
+http 31.14.122.59 20171
